<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Arse</string>
    <string name="sell">Sell</string>
    <string name="quantity">Category:</string>
    <string name="quantity_req">Category <font color="#FF0000">*</font></string>
    <string name="item_name_req">Feed URL <font color="#FF0000">*</font></string>
    <string name="item_price_req">Feed Name <font color="#FF0000">*</font></string>
    <string name="save_action">Save</string>
    <string name="delete_action">Delete</string>
    <string name="import_opml_action">Import OPML</string>
    <string name="export_opml_action">Export OPML</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="refresh_feed">Refresh feed</string>
    <string name="viewread_pref">com.alex.arse.viewread</string>
    <string name="sortascending_pref">com.alex.arse.sortascending</string>
</resources>